@@ -114,7 +114,7 @@ class Abstract_User {
 		if(empty($name)) {
 			$name = $this->username;
 		}
-		
+
 		return $name;
 	}
 
@@ -268,7 +268,7 @@ class Abstract_User {
 		if ($album->isOwner($this->uid)) {
 			return true;
 		}
-		
+
 		return false;
 	}
 
@@ -285,6 +285,12 @@ class Abstract_User {
 	}
 
 	function canAddComments($album) {
+		global $gallery;
+
+		if($gallery->app->comments_enabled == 'no') {
+			return false;
+		}
+
 		if ($this->isAdmin()) {
 			return true;
 		}
