@@ -1,3 +1,9 @@
+2007-01-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b39
+
+ * Fix: When Comments are globally deactivated, but a user has
+        the right to add a comment, the global deactivation didnt
+        work and a user can bypass this.
+
 2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b38
 
  Thanks to Rasmus Lerdorf for reporting these bugs:
